_archive/baikal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: baikal
        image: baikal
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "200m"
            memory: "200Mi"
          requests:
            cpu: "100m"
            memory: "100Mi"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: data
          mountPath: /var/www/baikal/Specific
        - name: config
          mountPath: /var/www/baikal/config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
